fix: gap between projects smaller

--- a/styles.css
+++ b/styles.css
@@ -464,7 +464,7 @@ body.index {
 
 .projects {
   display: flex;
-  gap: 1rem;
+  gap: 0.45rem;
   overflow-x: auto;
   overflow-y: hidden;
   scroll-behavior: smooth;
